Fixed code block displaying a horizontal scrollbar without need

--- a/_sass/paper/_typography.sass
+++ b/_sass/paper/_typography.sass
@@ -62,7 +62,7 @@ blockquote
 
 pre
   background-color: $theme01
-  overflow-x: scroll
+  overflow-x: auto
 
 code
   background-color: $theme01
